--- a/ChangeCounselling.Web/Views/Shared/_Layout.cshtml
+++ b/ChangeCounselling.Web/Views/Shared/_Layout.cshtml
@@ -41,6 +41,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Counsellors", "Index", "Counsellors")</li>
                     <li>@Html.ActionLink("Clients", "Index", "Client")</li>
+                    <li>@Html.ActionLink("Book", "Index", "Book")</li>
+                    <li>@Html.ActionLink("Bills", "Index", "Bill")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                 </ul>
