--- a/ChangeCounselling.Web/Views/Book/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Edit.cshtml
@@ -10,42 +10,58 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Book</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.BookID)
+<div class="form-horizontal">
+    <h4>Book</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.BookID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
-            </div>
+<div>
+    @using (Html.BeginForm())
+    {
+        @Html.LabelFor(model => model.DateTime, "Date", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "datepicker" } })
+       </div>
+            }
+            
+            <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+
+
+            @section scripts{
+
+                <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+                <script>
+                    $(function () {
+                        $(".datepicker").datepicker({
+                            dateFormat: "dd/mm/yy",
+                            //minDate: new (Date.now)
+                            yearRange: '2020:2022',
+                            showOn: "both",
+                            buttonText: "Select Date"
+                        });
+                    });
+                </script>
+
+            }
+
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Booked, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Booked)
-                    @Html.ValidationMessageFor(model => model.Booked, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
+
+
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientID, "ClientID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ClientID, "Client First Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ClientID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("ClientID", new SelectList(ViewBag.data, "ClientID", "ClientFirstName"), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CounsellorID, "CounsellorID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CounsellorID, "Counsellor First Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CounsellorID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("CounsellorID", new SelectList(ViewBag.data1, "CounsellorID", "CouncellorFirstName"), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CounsellorID, "", new { @class = "text-danger" })
             </div>
         </div>
