--- a/ChangeCounselling.Web/Views/Bill/_BillSummary.cshtml
+++ b/ChangeCounselling.Web/Views/Bill/_BillSummary.cshtml
@@ -6,8 +6,8 @@
         <h3 class="panel-title">@Model.BillID</h3>
     </div>
     <div class="panell-body">
-        @Html.ActionLink("Edit", "Edit", new { id = Model.BookID }) |
+        @*@Html.ActionLink("Edit", "Edit", new { id = Model.BookID }) |*@
         @Html.ActionLink("Details", "Details", new { id = Model.BookID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = Model.BookID })
+        @*@Html.ActionLink("Delete", "Delete", new { id = Model.BookID })*@
     </div>
 </div>
