--- a/ChangeCounselling.Web/Views/Book/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Edit.cshtml
@@ -35,7 +35,10 @@
         </div>
     </div>
 
-    <div>
+    <div class="form-group">
+
+
+
         @using (Html.BeginForm())
         {
             @Html.LabelFor(model => model.DateTime, "Date", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -63,6 +66,7 @@
             </script>
 
         }
+
 
     </div>
 
