--- a/ChangeCounselling.Web/Views/Book/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Edit.cshtml
@@ -57,7 +57,7 @@
                 $(function () {
                     $(".datepicker").datepicker({
                         dateFormat: "dd/mm/yy",
-                        //minDate: new (Date.now)
+                        hour: null,
                         yearRange: '2020:2022',
                         showOn: "both",
                         buttonText: "Select Date"
