--- a/ChangeCounselling.Web/Views/Bill/_BillSummary.cshtml
+++ b/ChangeCounselling.Web/Views/Bill/_BillSummary.cshtml
@@ -7,7 +7,7 @@
     </div>
     <div class="panell-body">
         @*@Html.ActionLink("Edit", "Edit", new { id = Model.BookID }) |*@
-        @Html.ActionLink("Details", "Details", new { id = Model.BookID }) |
+        @Html.ActionLink("Details", "Details", new { id = Model.BillID }) |
         @*@Html.ActionLink("Delete", "Delete", new { id = Model.BookID })*@
     </div>
 </div>
