Datepicker,view,bill

--- a/ChangeCounselling.Web/Views/Bill/Details.cshtml
+++ b/ChangeCounselling.Web/Views/Bill/Details.cshtml
@@ -30,6 +30,15 @@
         </dd>
 
         <br />
+        <dt>
+            @Html.DisplayNameFor(model => model.Book.DateTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Book.DateTime)
+        </dd>
+
+        <br />
 
         <dt>
             @Html.DisplayNameFor(model => model.ClientFirstName)
