--- a/ChangeCounselling.Web/Views/Book/Create.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Create.cshtml
@@ -3,7 +3,13 @@
 @{
     ViewBag.Title = "Create";
 }  
+    <head>
+        <script type="text/javascript" src="~/Scripts/moment.min.js"></script>
+        <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+        <link rel="stylesheet" href="~/Content/bootstrap-datetimepicker.css" />
 
+    </head>
     
 
 <h2>Create a Booking</h2>
@@ -42,27 +48,22 @@
 
         @using (Html.BeginForm())
         {
-            @Html.LabelFor(model => model.DateTime, "Date", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DateTime, "Session date", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "datepicker" } })
+                @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
             </div>
         }
 
-        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
-
-
         @section scripts{
 
-            <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-            <script>
+            
+            <script type="text/javascript">
                 $(function () {
-                    $(".datepicker").datepicker({
-                        dateFormat: "dd/mm/yy",
-                        hour: null,
-                        yearRange: '2020:2022',
-                        showOn: "both",
-                        buttonText: "Select Date"
-                    });
+
+                    $("#DateTime").datetimepicker({
+                        format: 'DD/MM/YYYY hh:mm'
+                    });            
                 });
             </script>
 
