--- a/ChangeCounselling.Web/Views/Book/Details.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Details.cshtml
@@ -9,6 +9,22 @@
 <div>
     <h4>Booking</h4>
     <hr />
+    <p>
+        BOOK
+    </p>
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.BookID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BookID)
+        </dd>
+    </dl>
+
+
+
+
 
     <p>
         CLIENT
