--- a/ChangeCounselling.Web/Views/Book/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Edit.cshtml
@@ -6,6 +6,14 @@
                 ViewBag.Title = "Edit";
 }
 
+    <head>
+        <script type="text/javascript" src="~/Scripts/moment.min.js"></script>
+        <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+        <link rel="stylesheet" href="~/Content/bootstrap-datetimepicker.css" />
+
+    </head>
+
 <h2>Edit</h2>
 
 @using (Html.BeginForm())
@@ -41,29 +49,25 @@
 
         @using (Html.BeginForm())
         {
-            @Html.LabelFor(model => model.DateTime, "Date", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "datepicker" } })
-            </div>
+            @Html.LabelFor(model => model.DateTime, "Session date", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
+        </div>
         }
 
-        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 
 
         @section scripts{
 
-            <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-            <script>
-                $(function () {
-                    $(".datepicker").datepicker({
-                        dateFormat: "dd/mm/yy",
-                        hour: null,
-                        yearRange: '2020:2022',
-                        showOn: "both",
-                        buttonText: "Select Date"
+                <script type="text/javascript">
+                    $(function () {
+
+                        $("#DateTime").datetimepicker({
+                            format: 'DD/MM/YYYY hh:mm'
+                        });
                     });
-                });
-            </script>
+                </script>
 
         }
 
