--- a/ChangeCounselling.Web/Views/Book/_BookSummary.cshtml
+++ b/ChangeCounselling.Web/Views/Book/_BookSummary.cshtml
@@ -9,6 +9,14 @@
         @Html.ActionLink("Edit", "Edit", new { id = Model.BookID }) |
         @Html.ActionLink("Details", "Details", new { id = Model.BookID }) |
         @Html.ActionLink("Delete", "Delete", new { id = Model.BookID })|
-        @Html.ActionLink("Create Bill", "CreateBill", new { id = Model.BookID })
+        @if (Model.Bills.Count == 0)
+        {
+            @Html.ActionLink("Create Bill", "CreateBill", new { id = Model.BookID })
+        }
+        else
+        {
+            @Html.ActionLink("Go to Bill", "Details","Bill", new { id = Model.Bills.First().BillID },null)
+        }
+
     </div>
 </div>
