--- a/ChangeCounselling.Web/Views/Counsellors/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Counsellors/Edit.cshtml
@@ -14,7 +14,8 @@
     <h4>Counsellor</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    
+    @Html.HiddenFor(model => model.CounsellorID)
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.CouncellorFirstName, htmlAttributes: new { @class = "control-label col-md-2" })
