Constraints, views,  etc.

--- a/ChangeCounselling.Web/Views/Book/Create.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Create.cshtml
@@ -62,7 +62,7 @@
                 $(function () {
 
                     $("#DateTime").datetimepicker({
-                        format: 'DD/MM/YYYY hh:mm'
+                        format: 'DD/MM/YYYY hh:mm A'
                     });            
                 });
             </script>
