--- a/ChangeCounselling.Web/Views/Book/Edit.cshtml
+++ b/ChangeCounselling.Web/Views/Book/Edit.cshtml
@@ -64,7 +64,7 @@
                     $(function () {
 
                         $("#DateTime").datetimepicker({
-                            format: 'DD/MM/YYYY hh:mm'
+                            format: 'DD/MM/YYYY hh:mm A'
                         });
                     });
                 </script>
